Created a class structure for Orders.java. Using HashMaps, this will be useful for menus aswell - turns search into lookup.

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,8 @@
             <compilerArgs>
               <arg>-Xlint:all,-classfile</arg>
             </compilerArgs>
+            <source>13</source>
+            <target>13</target>
           </configuration>
         </plugin>
 
