--- a/pom.xml
+++ b/pom.xml
@@ -28,16 +28,22 @@
 
     <dependency>
       <groupId> com.google.code.gson</groupId>
-      <artifactId>Gson</artifactId>
+      <artifactId>gson</artifactId>
       <version>2.8.8</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.what3words</groupId>
+      <artifactId>w3w-java-wrapper</artifactId>
+      <version>3.1.8</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derbyclient</artifactId>
       <version>10.15.2.0</version>
-      
-  </dependency>
+    </dependency>
+
 
   </dependencies>
 
