--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,24 @@
       <version>10.15.2.0</version>
     </dependency>
 
+ <!--   <dependency>
+      <groupId>com.github.filosganga</groupId>
+      <artifactId>geogson-core</artifactId>
+      <version>1.2.21</version>
+    </dependency>
+-->
+    <dependency>
+      <groupId>org.locationtech.jts</groupId>
+      <artifactId>jts-core</artifactId>
+      <version>1.18.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>de.grundid.opendatalab</groupId>
+      <artifactId>geojson-jackson</artifactId>
+      <version>1.14</version>
+    </dependency>
+
 
   </dependencies>
 
