--- a/pom.xml
+++ b/pom.xml
@@ -44,12 +44,12 @@
       <version>10.15.2.0</version>
     </dependency>
 
- <!--   <dependency>
-      <groupId>com.github.filosganga</groupId>
-      <artifactId>geogson-core</artifactId>
-      <version>1.2.21</version>
+    <dependency>
+      <groupId>com.mapbox.mapboxsdk</groupId>
+      <artifactId>mapbox-sdk-geojson</artifactId>
+      <version>5.8.0</version>
     </dependency>
--->
+
     <dependency>
       <groupId>org.locationtech.jts</groupId>
       <artifactId>jts-core</artifactId>
