--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,9 @@
   <groupId>uk.ac.ed.inf</groupId>
   <artifactId>ilp</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
   <name>ilp</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -122,10 +121,7 @@
           </executions>
         </plugin>
 
- <!--       <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin> -->
+
 
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
